css/styles.css
body {
  height: 100vh;
  margin: 0;
  font-family: 'Roboto';
}

.hero {
  background-color: #1f2937;
  margin: 0;
  padding: 30px;
  
}

.hero-logo {
  font-size: 24px;
  color: #f9faf8;
  
}

.hero-link-text {
  font-size: 18px;
  color: #e5e7eb;
  text-decoration: none;
}

.hero-secondary-text {
  color: #f9faf8;
  font-size: 18px;
  display: flex;
  justify-content: center;
  width: 400px;
}

.header {
  display: flex;
  align-items: flex-end;
  justify-content: space-around;
  gap: 200px;
}

.hero-main {
  display: flex;
  justify-content: space-around;
  
}

.herotext-container {
  display: flex;
  flex-direction: column;
  width: 300px;
}

.hero-main-text {
  color: #f9faf8;
  font-size: 48px;
  font-weight: 800;
  display: flex;
  justify-content: center;
}

button {
  color: #f9faf8;
  background-color: #3882f6;
  border: none;
  border-radius: 6px;
  padding: 5px;
  font-weight: bold;
  width: 115px; 
  cursor: pointer; 
}

.footer-button {
  border: 1.5px solid rgb(255, 255, 255);
  
}

.image-placeholder {
  color: #f9faf8;
  background-color: #7e7e7e;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 200px;
  width: 390px;
  font-size: 18px;
}

ul {
  padding: 0;
  margin: 0;
}

.img-container {
  display: flex;
  justify-content: center;
  gap: 16px;
}

.img-text {
  width: 140px;
  text-align: center;
}

.img {
  height: 20px;
  width: 40px;
  border: 4px solid #3882f6;
  padding: 50px;
  border-radius: 5px;

}

.top-heading {
  display: flex;
  justify-content: space-around;
}

p {
  font-size: 18px;
  color: #F9FAF8;
}

.random-info-section {
  background-color: rgb(255, 255, 255);
  padding: 30px;

}

.information-header {
  color:#1F2937;
  font-size: 36px;
  font-weight: 800;
  display: flex;
  justify-content: center;

}

.quote-section {
  background-color:#E5E7EB;
  padding: 30px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  font-weight: 300;
}

.quote {
  width: 760px;
  font-size: 36px;
  color: #1f2937;
  font-style: italic; 
}

.author {
  display: flex;
  justify-content: flex-end;
  width: 715px;
  font-weight: bold;
}

.call-to-action-section{
  padding: 50px 100px;
  display: flex;
  justify-content: center;
}

.call-to-action{
  background-color: #3882F6;
  color: #f9faf8;
  display: flex;
  justify-content: space-around;
  padding: 20px 40px;
  border-radius: 4px;
  width: 700px;
}

.calltoaction {
  font-weight: bold;

}

.footer{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #1F2937;
  color: white;
  padding: 20px;
}

